@@ -1,6 +1,7 @@
 Adminer 4.16.0-dev:
 MySQL: Fix saving bit(64) values (bug #839)
 PostgreSQL: Preserve whitespace in EXPLAIN (bug #827)
+PostgreSQL: Support SSL
 SQLite: Fix altering forign keys (bug #841)
 MS SQL: Foreign keys in non-default schema (bug #833)
 Oracle: Include tables granted by other user
